footer alignment issue resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,15 +40,6 @@ body {
     height: 250px;
 
 }
-
-/* for rating stars */
-span.stars, span.stars span {
-    display: block;
-    background: url(../images/stars.png) 0 -16px repeat-x;
-    width: 80px;
-    height: 16px;
-}
-
-span.stars span {
-    background-position: 0 0;
+a.nav-link {
+    display: inline;
 }
